fix: z-index * вернул значение z-index у header и footer

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,8 +52,7 @@ body {
     footer {
       flex: 0 0 auto;
 
-      z-index: 1; // без этого свойства линии на фоне будут поверх контента
-
+      z-index: 5; // без этого свойства линии на фоне и содержимое страниц будут поверх контента
     }
 
     main {
